native: use newer consul branch

--- a/connect-native/cmds/uuid-api/Dockerfile
+++ b/connect-native/cmds/uuid-api/Dockerfile
@@ -1,11 +1,8 @@
-# syntax=docker/dockerfile:experimental
-
 FROM golang:alpine as builder
 WORKDIR /build
 
-RUN apk add --no-cache openssh-client git
-RUN mkdir -p -m 0600 ~/.ssh && ssh-keyscan github.com >> ~/.ssh/known_hosts
-RUN --mount=type=ssh git clone git@github.com:hashicorp/nomad-connect-examples.git
+RUN apk add git
+RUN clone git@github.com:hashicorp/nomad-connect-examples.git
 
 WORKDIR /build/nomad-connect-examples/connect-native/cmds/uuid-api
 RUN go version && \
